--- a/views/product.hbs
+++ b/views/product.hbs
@@ -129,7 +129,11 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="search-res">
+        {{>product_list}}
+    </div>
+
+    <div class="container" id="product">
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
             <img src="https://drive.google.com/uc?export=download&id={{product.imgId}}">
