--- a/views/home.hbs
+++ b/views/home.hbs
@@ -139,22 +139,22 @@
     <section class="header">
         <div class="side-menu" id="side-menu">
             <ul>
-                <li>
+                <li id="side-menu-explore">
                     Explore<i class="fa fa-angle-right"></i>
                 </li>
-                <li>
-                    $10 - $20<i class="fa fa-angle-right"></i>
+                <li id="side-menu-price-opt-1" min="1" max="20">
+                    $1 - $20<i class="fa fa-angle-right"></i>
                 </li>
-                <li>
+                <li id="side-menu-price-opt-2" min="20" max="40">
                     $20 - $40<i class="fa fa-angle-right"></i>
                 </li>
-                <li>
+                <li id="side-menu-price-opt-3" min="40" max="60">
                     $40 - $60<i class="fa fa-angle-right"></i>
                 </li>
-                <li>
+                <li id="side-menu-price-opt-4" min="60" max="80">
                     $60 - $80<i class="fa fa-angle-right"></i>
                 </li>
-                <li>
+                <li id="side-menu-price-opt-5" min="80" max="100">
                     $80 - $100<i class="fa fa-angle-right"></i>
                 </li>
             </ul>
@@ -183,6 +183,10 @@
                     <li data-target="#slider" data-slide-to="3"></li>
                 </ol>
             </div>
+        </div>
+
+        <div class="search-res">
+            {{>product_list}}
         </div>
     </section>
 
