--- a/views/shoppingCart.hbs
+++ b/views/shoppingCart.hbs
@@ -48,6 +48,7 @@
         let cartCount = 0;
         let items = {};
         let nochanges = true;
+        let processedOrders = localStorage.processedOrders ? localStorage.getItem("processedOrders").split(",") : [];
 
         $.ajax({
             url: "/cart/all",
@@ -64,29 +65,29 @@
             cost = round((element.cost * parseFloat(element.amount)), 2);
             $("#cartItemHolder").append(
                 `
-                    <tr id="cartItem${element.cartId}">
-                        <td>
-                            <div class="row">
-                                <div class="col-md-3 text-left">
-                                    <img src="${img}" alt="Picture of ${element.name}" class="img-fluid rounded mb-2 shadow ">
+                            <tr id="cartItem${element.cartId}">
+                                <td>
+                                    <div class="row">
+                                        <div class="col-md-3 text-left">
+                                            <img src="${img}" alt="Picture of ${element.name}" class="img-fluid rounded mb-2 shadow ">
+                                                </div>
+                                            <div class="col-md-9 text-left mt-sm-2">
+                                                <h4><strong>${element.name}</strong></h4>
+                                                <p class="font-weight-light">${element.brand}</p>
+                                            </div>
                                         </div>
-                                    <div class="col-md-9 text-left mt-sm-2">
-                                        <h4><strong>${element.name}</strong></h4>
-                                        <p class="font-weight-light">${element.brand}</p>
-                                    </div>
-                                </div>
-                                </td>
-                            <td> $<span id="totalCost${element.cartId}">${cost}</span></td>
-                            <td>
-                                <input id="amount${element.cartId}" type="text" class="form-control form-control-lg text-center amount" value="${element.amount}", maxlength=4>
-                            </td>
-                            <td class="actions" data-th="">
-                                <div class="text-right">
-                                    <button id="deleteCart${element.cartId}" class="btn btn-white border-secondary bg-white btn-md mb-2">X</button>
-                                </div>
-                            </td>
-                    </tr>
-                    `
+                                        </td>
+                                    <td> $<span id="totalCost${element.cartId}">${cost}</span></td>
+                                    <td>
+                                        <input id="amount${element.cartId}" type="text" class="form-control form-control-lg text-center amount" value="${element.amount}", maxlength=4>
+                                    </td>
+                                    <td class="actions" data-th="">
+                                        <div class="text-right">
+                                            <button id="deleteCart${element.cartId}" class="btn btn-white border-secondary bg-white btn-md mb-2">X</button>
+                                        </div>
+                                    </td>
+                            </tr>
+                            `
             );
 
             items[element.cartId] = element;
@@ -120,6 +121,10 @@
 
         // rounds off rounding errors
         function round(n, d) {
+            if (n < 0.00000001) {
+                return 0;
+            }
+
             return Number(Math.round(n + "e" + d) + "e-" + d);
 
         }
@@ -151,11 +156,67 @@
         // alert the user if any cart item has invalid amounts.
         $("#checkout").on('click', function (e) {
             event.preventDefault();
+            let failedOrder = false;
 
             Object.keys(items).forEach(function (key) {
-                console.log(key);
-                console.log(items[key]);
+                let item = items[key];
+                makeOrder(item.productId, $(`#amount${item.cartId}`).val()).then((result) => {
+
+                    if (result > 0) {
+                        subtotal -= $(`#totalCost${item.cartId}`).text() ? round(parseFloat($(`#totalCost${item.cartId}`).text()), 2) : 0;
+                        $("#cartSubtotal").text(round(subtotal, 2));
+                        removeCartItem(item.cartId);
+                        cartCount--;
+                        $(`#cartItem${item.cartId}`).remove();
+                        delete items[item.cartId];
+
+                        processedOrders.push(result);
+                        localStorage.setItem("processedOrders", processedOrders);
+                    } else if (result == -1) {
+                        failedOrder = true;
+                        subtotal -= $(`#totalCost${item.cartId}`).text() ? round(parseFloat($(`#totalCost${item.cartId}`).text()), 2) : 0;
+                        $("#cartSubtotal").text(round(subtotal, 2));
+                        removeCartItem(item.cartId);
+                        cartCount--;
+                        $(`#cartItem${item.cartId}`).remove();
+                        delete items[item.cartId];
+
+                    } else {
+                        failedOrder = true;
+                        item.stock = -result + 1;
+                        $(`#amount${item.cartId}`).val(-result + 1);
+                        subtotal -= $(`#totalCost${item.cartId}`).text() ? round(parseFloat($(`#totalCost${item.cartId}`).text()), 2) : 0;
+                        $(`#totalCost${item.cartId}`).text((round(item.cost * (-result + 1000), 2) + ""));
+                        subtotal += $(`#totalCost${item.cartId}`).text() ? round(parseFloat($(`#totalCost${item.cartId}`).text()), 2) : 0;
+                        $("#cartSubtotal").text(round(subtotal, 2));
+                    }
+
+                    $("#cartCount").text(cartCount);
+                });
             });
+
+            if (failedOrder && cartCount > 0) {
+                alert("The remaining items could not be processed due to your request being greater than stock.  Items with zero stock have been removed from your cart.");
+                return;
+            } else if (failedOrder) {
+                alert("Items with zero stock have been removed from your cart, and will not be processed! Sorry for the inconvenience.");
+            }
+
+            localStorage.removeItem("processedOrders");
+
+            /*
+            $.ajax({
+                url: "/checkout",
+                type: "GET",
+                data: {
+                    processOrders: processedOrders
+                },
+                success: function (result, status) {
+                    return result;
+                },
+            });
+            */
+
             console.log("clicked");
         });
 
@@ -166,6 +227,21 @@
                 data: {
                     amount: amount,
                     cartId: cartId
+                },
+                success: function (result, status) {
+                    return result;
+                },
+            });
+        }
+
+        function makeOrder(productId, amount) {
+            console.log(productId, amount);
+            return $.ajax({
+                url: "/order/add",
+                type: "POST",
+                data: {
+                    amount: amount,
+                    productId: productId
                 },
                 success: function (result, status) {
                     return result;
